2012-05-23  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* NEWS: 
	* RELEASE: 
	- updated for 0.6.6
	
	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp: 
	- do not allow direct goals from kickoff
	- do not let the kickoff taker to kick the ball again befor other players

2012-05-22  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/gamestateaspect/gamestateaspect.cpp: 
	* plugin/soccer/gamestateaspect/gamestateaspect.h:
	- added knowledge about a 'paused' state, in which game is not really 
	  running (waiting for the referee to allow the game to continue, e.g. in
	  goal left/right state or at the beginning of a kick in state)
	
	* plugin/soccer/soccerruleaspect/soccerruleaspect.h:
	- a little cleanup, and fixed comment for mAutoKickOffTimeOrigin
	- removed an unused variable mLastValidBallPosition

	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp:
	- update game's paused state 
	- consider the referee rules always while the game is running (not paused),
	  and reset all counters otherwise. 
	 
2012-05-21  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* NEWS: 
	* RELEASE:
	- updated for 0.6.6 release
	 
	* data/rsg/agent/nao/naoleg.rsg: 
	- reduce Nao's foot height (patch by Sander) and modify the position of
	  ankle accordingly

2012-05-19  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp
	  (SoccerRuleAspect::CheckBallLeftField):
	  - fix the position of right corner kick to use mBallRadius rather than 
	    a hard coded value
	  - use new value for corner kick position for RoboCup 2012, to be between
	    the goal and field's corner position
	   
	* NEWS: 
	* RELEASE: 
	- added information about the new dimensions in this release
	
	* CMakeLists.txt:
	- updated version to 0.6.6

	* rcssserver3d/naosoccersim.rb: 
	- increased free kick distance to 2.0. actually it should be 2.75, but
	  since we are going to have an artificial corner point it should be 
	  probably smaller too.
	